feat: add some get method
