# src/schemas/territory.schema.ts
@@ -36,3 +36,21 @@ export const ProposeCreateResponse = z.object({
 export const SuccessResponse = z.object({
   success: z.boolean(),
 }).openapi('SuccessResponse')
+
+
+export const TerritoryQuery = z.object({
+  teamId: z.string().optional()
+}).openapi('TerritoryQuery')
+
+export const TerritoryListResponse = z.array(z.object({
+  id: z.string(),
+  name: z.string(),
+  team_id: z.string(),
+  x1: z.number(),
+  z1: z.number(),
+  x2: z.number(),
+  z2: z.number(),
+  area: z.number(),
+  type: TerritoryTypeEnum,
+  status: z.string()
+})).openapi('TerritoryListResponse')
